# pgrad

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  crontab_simple.txt  environment.yml  era5-levels-members.grib.923a8.idx  pgrad_dag.py  populatePDBbackground.py  pyproject.toml  requirements.txt  requirements.txt_new  requirements.txt_old  station_list_pgrad.csv  station_list_pgrad_full.csv
airflow/: airflow-scheduler.out  airflow.cfg  airflow.db  unittests.cfg
airflow/dags/: example_bash_operator.py_old  pgrad_dag.py  tutorial.py  tutorial.py_old
archive_logs/: log_mesowest_create_stn_list_pgrad_2020-09-19_14-37.txt
dags/: pgrad_dag.py  pgrad_dag.py_backup
images_repo/: stn_map.html
setup/: README.md  airflow-scheduler.service  airflow-webserver.service  setup_extra.txt
src/: backfill.sh  crontab.txt  crontab_full.txt  crontab_none.txt  flask_tutorial.py  operational.sh  pgrad.py  pgrad_oop.py  plot_stn_map.ipynb  plot_stn_map.py  read_stn_metadata_from_csv.py  run_all.sh  run_misc.sh  test_sum.py
src/cron_scripts/: calc_pgrad.bsh  (+13 more)
top_events/: alt_diff_KACV-KSFO.csv  alt_diff_KDAG-KLAX.csv  alt_diff_KMFR-KSAC.csv  alt_diff_KMFR-KSFO.csv  alt_diff_KVBG-KSBA.csv  alt_diff_KWMC-KSAC.csv  alt_diff_KWMC-KSFO.csv  pres_diff_KWMC-KSAC.csv  slp_diff_KACV-KSFO.csv  slp_diff_KBFL-KSBA.csv  slp_diff_KDAG-KLAX.csv  slp_diff_KMFR-KRDD.csv  slp_diff_KMFR-KSAC.csv  slp_diff_KMFR-KSFO.csv  slp_diff_KRDD-KSAC.csv  slp_diff_KSMX-KSBA.csv  slp_diff_KWMC-KSAC.csv  slp_diff_KWMC-KSFO.csv  stn_map.html  temp1.csv
website/: pgrad.html
www/: pgrad.html  pgrad.js
(+11 files in other folders)
