[tool.poetry]
name = "pgrad"
version = "0.1.0"
description = ""
authors = ["Craig Smith <craig.matthew.smith@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
eccodes = "^1.3.0"
cfgrib = "^0.9.9"
xarray = "^0.17.0"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
pandas = "1.1.1"
pymongo = "^3.11.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
